# RustCC

./: .clang-format  .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  TODO.md  build.rs  compile_flags.txt
.github/workflows/: ubuntu.yaml
src/: main.rs
src/qbe/: qbe.c  qbe.h
src/utils/: mod.rs
